syntax = "proto3";

package portdomainsvc;

message Port {
    string portCode = 1;
    string name = 2;
    string city = 3;
    string latitude = 4;
    string longitude = 5;
    string province = 6;
    string country = 7;
    string timezone = 8;
    string code = 9;
}

message AddPortsReq {
    repeated Port ports = 1;
}

message EmptyReply {}

message GetPortByCodeReq {
    string code = 1;
}

message GetPortByCodeReply {
    Port port = 1;
}

service PortDomainService {
  rpc AddPorts (AddPortsReq) returns (EmptyReply) {}
  rpc GetPortByCode(GetPortByCodeReq) returns (GetPortByCodeReply) {}
}
